--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.0.15",
     "@types/node": "^22.7.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.37.4",
@@ -34,6 +36,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "gts": "^6.0.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
