--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dev-tools": "^0.0.1",
     "react-dom": "^19.0.0",
