--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "posttest": "npm.cmd run lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
