--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.4.0",
+    "react-select": "^5.10.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
