--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,9 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "customNotes": {
+    "type": "module"
+  },
   "engines": {
     "node": ">=16.4.0",
     "npm": ">=8.0.0"
@@ -29,6 +31,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.4.0",
     "react-select": "^5.10.1",
+    "seedrandom": "^3.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "@types/node": "^22.7.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
