--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "gts": "^6.0.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
+    "tsx": "^4.19.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
